Ajout COnnexion UI

--- a/NodeVisionProject/NodeVisionProject.csproj
+++ b/NodeVisionProject/NodeVisionProject.csproj
@@ -962,6 +962,7 @@
     <TypeScriptCompile Include="view\UIattribute.ts" />
     <TypeScriptCompile Include="view\UIbar.ts" />
     <TypeScriptCompile Include="view\UIbranch.ts" />
+    <TypeScriptCompile Include="view\UIconnexion.ts" />
     <TypeScriptCompile Include="view\UIgraph.ts" />
     <TypeScriptCompile Include="view\UImodal.ts" />
     <TypeScriptCompile Include="view\UInode.ts" />
