bellman ford + CSS et correction de l'initialisation

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "es6-shim": "^0.33.13",
     "express": "^4.10.2",
     "neo4j-io": "^1.0.4",
+    "requirejs": "^2.1.22",
     "socket.io": "^1.4.4",
     "systemjs": "0.19.2"
   },
